Revert "fix: vertically align radio buttons for test filters"
This reverts commit 4c5b952f63812f5cc2df3200977e428796e34171.

--- a/frontend/src/components/FilterControls/FilterControls.module.scss
+++ b/frontend/src/components/FilterControls/FilterControls.module.scss
@@ -8,13 +8,6 @@
   flex-direction: column;
 }
 .checkboxContainer {
-  display: flex;
-  div {
-    margin-left: 5px;
-    input {
-      margin-left: -16px;
-    }
-  }
 }
 .failureReasonFilterControls {
   display: flex;
